--- a/src/assets/scss/core/masks/_mask.scss
+++ b/src/assets/scss/core/masks/_mask.scss
@@ -9,4 +9,5 @@
     width: 100%;
     height: 100%;
     @include transition($transition-base);
+    border-radius: 15px;
 }
